# seelo

./: .env.example  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
.firebase/: hosting.aG9zdGluZw.cache
android/: key.properties.template
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
desktop-tauri/: package-lock.json  package.json  vite.config.js
desktop-tauri/src/: index.html  main.js
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: ble_advertiser.rs  main.rs
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: analytics_screen.dart  auth_safe.dart  auth_screen.dart  bluetooth_discovery_screen.dart  bluetooth_service.dart  connected_devices_screen.dart  device_manager_screen.dart  home_screen.dart  logger.dart  main.dart  premium.dart  profile_screen.dart  quick_pairing_screen.dart  settings_screen.dart  subscription_screen.dart  team_workspace_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
plugin/: code.js  manifest.json  ui.html  viewer.html
relay/: admin.html  generate-key.js  oauth-callback.html  package-lock.json  package.json  privacy.html  railway.json  server.js  store.js  terms.html  viewer.html
server/: .gitignore  Dockerfile  docker-compose.yml  index.js  package-lock.json  package.json
test/: widget_test.dart
web/: index.html  manifest.json
(+7 files in other folders)
