[package]
name = "seelo-desktop"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
socketioxide = "0.14"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
qrcode = "0.14"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
]}

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
